# engineering-patterns-practice

./: README.md
MVP_demo/: CMakeLists.txt
MVP_demo/include/model/: vehicle_model.hpp
MVP_demo/include/present/: main_presenter.hpp
MVP_demo/include/view/: dashboard_view.hpp  view_interface.hpp
MVP_demo/src/: main.cpp
MVP_demo/src/model/: vehicle_model.cpp
MVP_demo/src/present/: main_presenter.cpp
MVP_demo/src/view/: dashboard_view.cpp
MVP_demo/test/: CMakeLists.txt  test_mvp.cpp
adaptor_pattern_demo/: CMakeLists.txt
adaptor_pattern_demo/include/adaptor/: legacy_lidar.hpp  lidar_adaptor.hpp  modern_camera.hpp  sensor_interface.hpp
adaptor_pattern_demo/src/: legacy_lidar.cpp  lidar_adaptor.cpp  main.cpp  modern_camera.cpp
adaptor_pattern_demo/test/: CMakeLists.txt  test_adaptor.cpp
logger_demo/: CMakeLists.txt
logger_demo/include/logger/: log_formatter.hpp  log_level.hpp  logger.hpp
logger_demo/src/: log_formatter.cpp  logger.cpp  main.cpp
logger_demo/test/: test_logger.cpp
modern_features_demo/: CMakeLists.txt
modern_features_demo/include/: demos.h
modern_features_demo/src/: lambda_demo.cpp  locks_demo.cpp  main.cpp  smart_pointers_demo.cpp  template_demo.cpp  template_specialization_demo.cpp
registry_demo/: CMakeLists.txt
registry_demo/config/: pipeline_config.json
registry_demo/include/: component.hpp  registry.hpp
registry_demo/src/: algorithm_components.cpp  main.cpp  sensor_components.cpp
registry_demo/test/: test  test.cpp
stringlib_demo/: CMakeLists.txt
stringlib_demo/include/: strutil.hpp
stringlib_demo/src/: strutil.cpp
stringlib_demo/test/: test  test.cpp
